--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
 <body>
     <header class="container-fluid header">
-        <div class="container-fluid pre-header d-flex justify-content-center pt-2">
-            <div class="container d-flex row">
-                <div class="d-flex col-md-10 p-0">
+        <div class="container-fluid pre-header d-flex justify-content-center">
+            <div class="container d-flex my-3 row">
+                <div class="d-flex col-md-9 p-0">
                     <i class="bi bi-telephone me-3"></i>
-                    <p class="info"> <a class="" href="tel:+88121234567">8 (812) 123-45-67</a>| Працюємо 7 днів на
+                    <p class="info m-0"> <a class="" href="tel:+88121234567">8 (812) 123-45-67</a>| Працюємо 7 днів на
                         тиждень |
                         9:00 — 18:00</p>
                 </div>
-                <div class="d-flex col-md-2 p-0 login-wrap">
+                <div class="d-flex col-md-3 p-0 login-wrap ps-lg-4 ps-md-0">
                     <i class="bi bi-box-arrow-in-right login-icon"></i>
-                    <p class="login">Вхід / Реєстрація</p>
+                    <p class="login m-0">Вхід / Реєстрація</p>
                 </div>
             </div>
         </div>
@@ -49,24 +49,29 @@
         <div class="container">
             <div class="row colextions-wrapper m-0">
                 <nav class="navbar navbar-expand-md">
-                    <a href="#" class="logo col-lg-6 col-md-3 col-sm-3">PORTEN</a>
+                    <a href="#" class="logo col-lg-5 col-md-3 col-sm-3">
+                        <!-- PORTEN -->
+                        <img src="./img/PORTEN.png" alt="logo" width="104">
+                    </a>
                     <button class="navbar-toggler bg-secondary my-3" type="button" data-toggle="collapse"
                         data-target="#collapsibleNavbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse col-lg-4 col-md-3" id="collapsibleNavbar">
+                    <div class="collapse navbar-collapse col-lg-5 col-md-3" id="collapsibleNavbar">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link active" href="#">сподобалось</a>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#">Особистий кабінет</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">налаштування</a></li>
                         </ul>
+
+                        <div class="container d-flex col-md-1 p-0 m-0 mb-md-0 mb-sm-3 ms-3">
+                            <i class="bi bi-cart2 align-self-center icon me-5"></i>
+                            <i class="bi bi-search align-self-center icon"></i>
+                        </div>
                     </div>
 
-                    <div class="container d-flex col-md-1 p-0 m-0 mb-md-0 mb-sm-3">
-                        <i class="bi bi-cart2 align-self-center icon me-5"></i>
-                        <i class="bi bi-search align-self-center icon"></i>
-                    </div>
+
                 </nav>
             </div>
         </div>
@@ -76,7 +81,10 @@
         <section class="hero">
             <div class="container-fluid row">
                 <div class="container hero-wraper">
-                    <h1 class="hero-title">PORTEN</h1>
+                    <h1 class="hero-title">
+                        <!-- PORTEN -->
+                        <img src="./img/PORTEN.png" alt="logo" width="185">
+                    </h1>
                     <p class="hero-city">івано-франківськ</p>
                 </div>
                 <div class="container-fluid row">
@@ -103,7 +111,7 @@
 
                     <div class="container">
                         <ul class="row new-seson-list-wrapper">
-                            <li class="new-seson-item col-lg-4 col-sm-6">
+                            <li class="new-seson-item col-lg-4 col-md-4 col-sm-6">
                                 <div class="new-seson-img-wraper m-0">
                                     <img src="./img/new-clock1.png" alt="clock 1">
                                 </div>
@@ -111,7 +119,7 @@
                                 <p class="new-seson-item-price">13 600 грн.</p>
 
                             </li>
-                            <li class="new-seson-item col-lg-4 col-sm-6">
+                            <li class="new-seson-item col-lg-4 col-md-4 col-sm-6">
                                 <div class="new-seson-img-wraper m-0">
                                     <img src="./img/new-clock2.png" alt="clock 1">
                                 </div>
@@ -119,7 +127,7 @@
                                 <p class="new-seson-item-price">16 500 грн. </p>
 
                             </li>
-                            <li class="new-seson-item col-lg-4 col-sm-6 mt-md-0 mt-sm-5">
+                            <li class="new-seson-item col-lg-4 col-md-4 col-sm-6 mt-lg-0">
                                 <div class="new-seson-img-wraper m-0">
                                     <img src="./img/new-clock3.png" alt="clock 1">
                                 </div>
@@ -147,7 +155,8 @@
                 <div class="container old-colection-wraper col-md-7">
                     <div class="row justify-content-center">
                         <h2 class="section-title">колекція 2018</h2>
-                        <p class="old-colection-text p-0">Годинники як інструмент визначення часу давно і надійно
+                        <p class="old-colection-text p-md-0 p-sm-3">Годинники як інструмент визначення часу давно і
+                            надійно
                             прижилися
                             в
                             людській
@@ -226,11 +235,11 @@
                 </li>
             </ul> -->
 
-            <div class="container table-responsive-lg table-responsive-xl m-0">
+            <div class="container table-responsive-xl m-0">
                 <table class="table">
                     <tbody class="container new-product-list">
                         <tr>
-                            <td class="new-product">
+                            <td class="new-product col-sm-6 col-md-3">
                                 <div class="new-product-img-wrap">
                                     <img class="new-product-img" src="./img/new-clock2.png" alt="new-clock" width="215"
                                         height="234">
@@ -238,7 +247,7 @@
                                 <p class="new-seson-item-name">Carl von Zeyten</p>
                                 <p class="new-seson-item-price">16 500 грн.</p>
                             </td>
-                            <td class="new-product">
+                            <td class="new-product col-sm-6 col-md-3">
                                 <div class="new-product-img-wrap">
                                     <img class="new-product-img" src="./img/new-clock3.png" alt="new-clock" width="215"
                                         height="234">
@@ -246,7 +255,7 @@
                                 <p class="new-seson-item-name">JORD AR5905</p>
                                 <p class="new-seson-item-price">65 000 грн.</p>
                             </td>
-                            <td class="new-product">
+                            <td class="new-product col-sm-6 col-md-3">
                                 <div class="new-product-img-wrap">
                                     <img class="new-product-img" src="./img/new-clock4.png" alt="new-clock" width="215"
                                         height="234">
@@ -254,7 +263,7 @@
                                 <p class="new-seson-item-name">Emporio Armani Sportivo </p>
                                 <p class="new-seson-item-price">165 000 грн.</p>
                             </td>
-                            <td class="new-product">
+                            <td class="new-product col-sm-6 col-md-3">
                                 <div class="new-product-img-wrap">
                                     <img class="new-product-img" src="./img/new-clock5.png" alt="new-clock" width="215"
                                         height="234">
@@ -307,8 +316,8 @@
 
             <ul class="container-fluid">
                 <li class="row mb-3 colextions-wrapper ms-0">
-                    <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles1.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12 p-md-0 p-sm-5">
+                    <img class="col-lg-5 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles1.webp" alt="Articles">
+                    <div class="col-lg-6 col-md-4 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ROGER DUBUIS. ЧАСТИНА 1</h3>
                         <p class="article-text pe-md-3">Цей чемпіон «гіперхорології» став синонімом надмірності й
                             завдяки
@@ -321,15 +330,15 @@
                             за виготовленням та оздобленням деталей, а також за збіркою та регулюванням годинників
                             компанії.
                         </p>
-                        <div class="d-flex justify-content-between px-3 pt-5">
+                        <div class="d-flex justify-content-between pt-5">
                             <a class="new-products-link" href="">читати</a>
-                            <p class="hashtags">#ЕКСКЛЮЗИВ #ПРОБРЕНД</p>
+                            <p class="hashtags ms-md-4 me-3">#ЕКСКЛЮЗИВ #ПРОБРЕНД</p>
                         </div>
                     </div>
                 </li>
                 <li class="row mb-3 colextions-wrapper ms-0">
-                    <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles2.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12 p-md-0 p-sm-5">
+                    <img class="col-lg-5 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles2.webp" alt="Articles">
+                    <div class="col-lg-6 col-md-4 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ІСТОРІЯ ЛЮКСОВИХ ГОДИННИКІВ. ЧАСТИНА 1</h3>
                         <p class="article-text pe-3">Історія люксових годинників зародилася дуже давно, вона веде відлік
                             із
@@ -340,15 +349,15 @@
                             Власне, з
                             того часу мало що змінилося.</p>
 
-                        <div class="d-flex justify-content-between px-3 pt-5">
+                        <div class="d-flex justify-content-between pt-5">
                             <a class="new-products-link" href="">читати</a>
-                            <p class="hashtags">#ЕКСКЛЮЗИВ #IСТОРIЯ</p>
+                            <p class="hashtags ms-md-4 me-3">#ЕКСКЛЮЗИВ #IСТОРIЯ</p>
                         </div>
                     </div>
                 </li>
                 <li class="row colextions-wrapper ms-0">
-                    <img class="col-md-5 col-sm-12 ps-0 article-img" src="./img/Articles3.webp" alt="Articles">
-                    <div class="col-md-6 col-sm-12 p-md-0 p-sm-5">
+                    <img class="col-lg-5 col-md-6 col-sm-12 ps-0 article-img" src="./img/Articles3.webp" alt="Articles">
+                    <div class="col-lg-6 col-md-4 col-sm-12 p-md-0 p-sm-5">
                         <h3 class="article-title">ВЕЛИКИЙ ТА СМІЛИВИЙ TISSOT PRS 516 CHRONOGRAPH</h3>
                         <p class="article-text pe-3">На початку цього року компанія Tissot оновила модель PRS 516
                             Automatic
@@ -360,9 +369,9 @@
                             чудовою
                             ціною.</p>
 
-                        <div class="d-flex justify-content-between px-3 pt-5">
+                        <div class="d-flex justify-content-between pt-5">
                             <a class="new-products-link" href="">читати</a>
-                            <p class="hashtags">#ХРОНОГРАФ #TISSOT #ОГЛЯДГОДИННИКIВ</p>
+                            <p class="hashtags ms-md-4 me-3">#ХРОНОГРАФ #TISSOT #ОГЛЯДГОДИННИКIВ</p>
                         </div>
                     </div>
                 </li>
@@ -372,10 +381,13 @@
         <section class="containet partners">
             <h2 class="section-title">Наші партнери</h2>
             <div class="container partners-list">
-                <ul class="row justify-content-between p-0 m-0">
-                    <li class="col-3 partner-logo"><img src="./img/partner1.png" alt="partner logo" width="250"></li>
-                    <li class="col-3 partner-logo"><img src="./img/partner2.png" alt="partner logo" width="250"></li>
-                    <li class="col-2 partner-logo"><img src="./img/partner3.png" alt="partner logo" width="250"></li>
+                <ul class="row justify-content-center p-0 m-0">
+                    <li class="col-3 partner-logo me-4"><img src="./img/partner1.png" alt="partner logo" width="250">
+                    </li>
+                    <li class="col-3 partner-logo me-4"><img src="./img/partner2.png" alt="partner logo" width="250">
+                    </li>
+                    <li class="col-2 partner-logo me-4"><img src="./img/partner3.png" alt="partner logo" width="250">
+                    </li>
                     <li class="col-2 partner-logo"><img src="./img/partner4.png" alt="partner logo" width="250"></li>
                 </ul>
             </div>
@@ -383,7 +395,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-main-wrap">
             <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <h3 class="footer-section-title">про компанію</h3>
@@ -404,20 +416,23 @@
                 <div class="col-md-4 col-sm-12">
                     <div class="containet footer-categories">
                         <h3 class="footer-section-title">Категорії</h3>
-                        <ul class="row p-0">
-                            <li class="col-md-4 col-sm-3"><a class="btn" href="">годинники</a></li>
-                            <li class="col-md-4 col-sm-3"><a class="btn" href="">запонки</a></li>
-                            <li class="col-md-4 col-sm-3"><a class="btn" href="">ремені</a></li>
-                            <div class="row mt-4">
-                                <li class="col-md-6 col-sm-4 mt-6 pe-0"><a class="btn" href="">ювелірні вироби</a></li>
-                                <li class="col-md-6 col-sm-4 mt-6 "><a class="btn" href="">на замовлення</a></li>
+                        <ul class="row p-md-0 p-sm-3">
+                            <li class="col-lg-4 col-md-6 col-sm-3 mb-4"><a class="btn" href="">годинники</a></li>
+                            <li class="col-lg-4 col-md-6 col-sm-3 mb-4"><a class="btn" href="">запонки</a></li>
+                            <li class="col-lg-4 col-md-6 col-sm-3 mb-4"><a class="btn" href="">ремені</a></li>
+                            <div class="row">
+                                <li class="col-lg-6 col-md-12 col-sm-5 mt-6 pe-0 mb-4"><a class="btn" href="">ювелірні
+                                        вироби</a>
+                                </li>
+                                <li class="col-lg-6 col-md-12 col-sm-5 mt-6 mb-4"><a class="btn" href="">на
+                                        замовлення</a></li>
                             </div>
-                            <li class="col-md-4 mt-3"><a class="btn" href="">браслети</a></li>
+                            <li class="col-md-4"><a class="btn" href="">браслети</a></li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-sm-12 pe-0">
+                <div class="col-md-4 col-sm-12 pe-0 mb-md-0 mb-sm-3">
                     <div class="container p-0">
                         <h3 class="footer-section-title">розсилка</h3>
                         <p class="footer-section-text">Компанія пропонує тільки оригінальну продукцію від найвідоміших
@@ -433,7 +448,7 @@
             </div>
         </div>
 
-        <div class="container-fluid d-flex justify-content-between pt-3 px-5 footer-copiright">
+        <div class="container-fluid d-flex justify-content-between pt-3 px-5 m-0 footer-copiright">
             <p>© 2022 PORTEN, Інтернет-магазин годинників</p>
             <p>Угода користувача</p>
         </div>
